syntax = "proto3";

package attachments_provider;
option go_package = "attachments_ppu.v1;attachments";

service AttachmentsProvider {
  rpc Create(CreateAttachmentRequest) returns (AttachmentResponse);
  rpc Get(GetAttachmentRequest) returns (AttachmentResponse);
  rpc Update(AttachmentResponse) returns (AttachmentResponse);
  rpc Delete(DeleteAttachmentRequest) returns (DeleteAttachmentResponse);
  rpc List(ListAttachmentsRequest) returns (AttachmentsListResponse);
}

message CreateAttachmentRequest {
  int32 attachment_type_id = 1;
  string file_name = 2;
  string file_path = 3;
  string mime_type = 4;
  int64 file_size = 5;
}

message GetAttachmentRequest {
  int32 id = 1;
}

message AttachmentResponse {
  int32 id = 1;
  int32 attachment_type_id = 2;
  string file_name = 3;
  string file_path = 4;
  string mime_type = 5;
  int64 file_size = 6;
  string created_at = 7;
}

message DeleteAttachmentRequest {
  int32 id = 1;
}
message DeleteAttachmentResponse {
  bool success = 1;
}

message ListAttachmentsRequest {}
message AttachmentsListResponse {
  repeated AttachmentResponse data = 1;
}